--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Simple App1</title>
 </head>
 <body>
-    <h1>Hello from the Docker container!</h1>
+    <h1>Hello from the Docke container!</h1>
 </body>
 </html>
